# casper-contract-kit

./: AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
crates/casper-ffi-shim/: Cargo.toml
crates/casper-ffi-shim/src/: lib.rs
crates/contract-api/: Cargo.toml  build.rs
crates/contract-api/src/: binary_port.rs  collections.rs  error.rs  lib.rs  macro_support.rs  named_key.rs  prelude.rs  sdk.rs  typed_uref.rs  utils.rs  wasm_support.rs
crates/contract-api/src/collections/: base128.rs  dictionary_key.rs  mapping.rs  set.rs  vector.rs
crates/contract-extras/: Cargo.toml
crates/contract-extras/src/: cep18.rs  lib.rs  ownable.rs  pausable.rs
crates/contract-extras/src/cep18/: allowances.rs  balances.rs  constants.rs  entry_points.rs  error.rs  events.rs  modalities.rs  security.rs  utils.rs
crates/contract-extras/tests/: test_macros.rs
crates/contract-macros/: Cargo.toml
crates/contract-macros/src/: lib.rs
crates/rust-sdk/: Cargo.toml
crates/rust-sdk/examples/: sse_listener.rs
crates/rust-sdk/src/: jsonrpc.rs  lib.rs  sse.rs
crates/rust-sdk/src/sse/: config.rs  event.rs
examples/do-nothing-caller/: Cargo.toml
examples/do-nothing-caller/src/: lib.rs
examples/do-nothing-stored/: Cargo.toml
examples/do-nothing-stored/src/: event.rs  lib.rs
examples/do-nothing-stored/tests/: do_nothing_stored_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
