[package]
name = "veles-casper-contract-api"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Contract API and test utilities for Casper smart contracts."
documentation = "https://docs.rs/veles-casper-contract-api"
homepage = "https://veleslabs.xyz"
repository = "https://github.com/veles-labs/casper-contract-kit"

[dependencies]
veles-casper-contract-macros = { workspace = true }
lol_alloc =  { version = "0.4.1", optional = true }
casper-contract = { workspace = true }
casper-types = { workspace = true }
casper-event-standard = { workspace = true, default-features = false }
static_assertions = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
veles-casper-ffi-shim = { workspace = true }
casper-engine-test-support = { workspace = true }
casper-execution-engine = { workspace = true }
casper-storage = { workspace = true }
casper-binary-port = { workspace = true }
tokio = "1.48.0"
thiserror = "2"

[features]
default = ["wasm_allocator", "wasm_panic_handler"]
as_dependency = ["veles-casper-contract-macros/as_dependency"]
std = ["casper-types/std"]
json-schema = ["casper-types/json-schema"]
wasm_allocator = ["lol_alloc"]
wasm_panic_handler = []

[dev-dependencies]
proptest = "1.4"
