[package]
name = "veles-casper-rust-sdk"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust SDK for interacting with Casper nodes via JSON-RPC and SSE."
documentation = "https://docs.rs/veles-casper-rust-sdk"
homepage = "https://veleslabs.xyz"
repository = "https://github.com/veles-labs/casper-contract-kit"

[dependencies]
casper-client = { workspace = true }
casper-types = { workspace = true }
async-stream = "0.3.6"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
tokio = "1.48.0"
tracing = "0.1.41"
url = "2.5.8"
thiserror = "2"
toml = "0.9"
tempfile = "3"
rand = "0.9.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
