[package]
name = "do-nothing-stored"
version = "0.1.0"
authors = ["Michał Papierski <michal@papierski.net>"]
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Example Casper contract that performs no-op stored logic."
documentation = "https://github.com/veles-labs/casper-contract-kit"
homepage = "https://veleslabs.xyz"
repository = "https://github.com/veles-labs/casper-contract-kit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
veles-casper-contract-api = { workspace = true }

[features]
default = ["veles-casper-contract-api/wasm_allocator", "veles-casper-contract-api/wasm_panic_handler"]
std = ["veles-casper-contract-api/std"]
as_dependency = ["veles-casper-contract-api/as_dependency"]

[dev-dependencies]
once_cell = "1.21.3"
